argocd/applications/foundryvtt-ando/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: "foundryvtt-ando"
  labels:
    app: "foundryvtt-ando"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "foundryvtt-ando"

  template:
    metadata:
      labels:
        app: "foundryvtt-ando"

    spec:
      containers:
        - name: "foundryvtt"
          image: "felddy/foundryvtt:11.315"

          ports:
            - name: "foundryvtt-ando"
              containerPort: 30000

          volumeMounts:
            - name: "container-cache"
              mountPath: "/container-cache"

            - name: "data"
              mountPath: "/data"

            - name: "load"
              mountPath: "/load"

        - name: "rsync"
          image: "ogivuk/rsync:latest"

          volumeMounts:
            - name: "backup"
              mountPath: "/data/destination"

            - name: "data"
              mountPath: "/data/source"
              readOnly: true

            - name: "rsync"
              mountPath: "/rsync"

      hostname: "ando-mcfoundry-host"
      nodeSelector:
        kubernetes.io/hostname: "thicket2"

      volumes:
        - name: "container-cache"
          persistentVolumeClaim:
            claimName: "container-cache"

        - name: "data"
          persistentVolumeClaim:
            claimName: "data"

        - name: "load"
          persistentVolumeClaim:
            claimName: "load"

        - name: "backup"
          persistentVolumeClaim:
            claimName: "backup"

        - name: "rsync"
          persistentVolumeClaim:
            claimName: "rsync"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "foundryvtt-ando"
    service: "foundryvtt-ando"
  name: "foundryvtt-ando"
  namespace: "foundryvtt-ando"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "foundryvtt-ando"

  selector:
    app: "foundryvtt-ando"
    service: "foundryvtt-ando"

  type: NodePort

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "foundryvtt-ando"
    service: "foundryvtt-ando"
  name: "foundryvtt-ando-web"
  namespace: "foundryvtt-ando"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`ando-mcfoundry.tlake.io`)
      kind: Rule
      services:
        - name: "foundryvtt-ando"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "foundryvtt-ando"
    service: "foundryvtt-ando"
  name: "foundryvtt-ando-websecure"
  namespace: "foundryvtt-ando"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`ando-mcfoundry.tlake.io`)
      kind: Rule
      services:
        - name: "foundryvtt-ando"
          port: "http-traffic"

  tls:
    certResolver: "production"
